ChainWatcher, build.gradle.kts: add AOT cache, AOT cache training